tests/errors/ty_errors/ty_errors.c
#error ty_errors.ty_errors:3:1 Type mismatch: 'unit' <> 'int'.
#error ty_errors.ty_errors:6:11 Type mismatch: 'int' <> 'string'.
#error ty_errors.ty_errors:12:18 Arity mismatch: expected (((_) -> _) -> _, ..) -> .., but was (_) -> _.
#error ty_errors.ty_errors:12:19 Recursive type occurred while unifying '?17 -> ?18' to '?22'.
